[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaifa_meter"
version = "3.0.0"
authors = [{ name = "Endre Bjørsvik", email = "endrebjorsvik@gmail.com" }]
description = "Utility for reading HAN data from Kaifa electriciy meters."
readme = "README.md"

dependencies = ["construct>=2.9", "pyserial", "Click", "psycopg2-binary"]
requires-python = ">=3.6"
license = "GPL-3.0-only"
license-files = ["LICENCSE"]

classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

# [project.optional-dependencies]
# cli = ["rich", "click"]

[project.urls]
Homepage = "https://github.com/endrebjorsvik/kaifa-meter"

[project.scripts]
kaifa_meter = "kaifa_meter.cli:cli"
